[gd_scene load_steps=2 format=3 uid="uid://bs4p3q5y4a7os"]

[ext_resource type="Script" path="res://scripts/ui/new_game_panel.gd" id="1"]

[node name="NewGamePanel" type="Panel"]
custom_minimum_size = Vector2(600, 500)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -300.0
offset_top = -250.0
offset_right = 300.0
offset_bottom = 250.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 30
theme_override_constants/margin_top = 30
theme_override_constants/margin_right = 30
theme_override_constants/margin_bottom = 30

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="TitleLabel" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "New Game Setup"
horizontal_alignment = 1

[node name="OptionsContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 25

[node name="WorldSizeContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/OptionsContainer"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/OptionsContainer/WorldSizeContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "World Size"

[node name="WorldSizeOption" type="OptionButton" parent="MarginContainer/VBoxContainer/OptionsContainer/WorldSizeContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
theme_override_font_sizes/font_size = 16

[node name="DifficultyContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/OptionsContainer"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/OptionsContainer/DifficultyContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "Difficulty"

[node name="DifficultyOption" type="OptionButton" parent="MarginContainer/VBoxContainer/OptionsContainer/DifficultyContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
theme_override_font_sizes/font_size = 16

[node name="FactionContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/OptionsContainer"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/OptionsContainer/FactionContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "Starting Faction"

[node name="FactionOption" type="OptionButton" parent="MarginContainer/VBoxContainer/OptionsContainer/FactionContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
theme_override_font_sizes/font_size = 16

[node name="ButtonsContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 15
alignment = 1

[node name="CancelButton" type="Button" parent="MarginContainer/VBoxContainer/ButtonsContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(150, 50)
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "Cancel"

[node name="StartButton" type="Button" parent="MarginContainer/VBoxContainer/ButtonsContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(150, 50)
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "Start Game"
